--- a/VehicleMonitorCar/hmi/src/main/res/layout/activity_main.xml
+++ b/VehicleMonitorCar/hmi/src/main/res/layout/activity_main.xml
@@ -11,6 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.MainActivity">
-
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="获取数据"
+            android:textSize="40sp"
+            />
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
