feat:完善CarService模块,提供定位

--- a/VehicleMonitorCar/hmi/src/main/res/layout/activity_main.xml
+++ b/VehicleMonitorCar/hmi/src/main/res/layout/activity_main.xml
@@ -18,5 +18,51 @@
             android:text="获取数据"
             android:textSize="40sp"
             />
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:layout_margin="10dp"
+            android:textSize="30sp">
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="车速：100km/s"
+                android:textSize="30sp"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="车型：Speedy Model"
+                android:textSize="30sp"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="生产年份：2020"
+                android:textSize="30sp"/>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="制造商：Toy Vehicle"
+                android:textSize="30sp"/>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="总油量：15000"
+                android:textSize="30sp"/>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="当前油量：14998"
+                android:textSize="30sp"/>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+        <androidx.appcompat.widget.AppCompatButton
+            android:text="一键报警"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="40sp"/>
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
