--- a/VehicleMonitorCar/hmi/src/main/res/layout/activity_hvac.xml
+++ b/VehicleMonitorCar/hmi/src/main/res/layout/activity_hvac.xml
@@ -6,7 +6,7 @@
     <data>
 
         <variable
-            name="viewModel"
+            name="viewModel2"
             type="com.jihan.monitor.ui.HvacViewModel" />
     </data>
 
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
-            android:onClick="@{viewModel::setTemperature}"
+            android:onClick="@{viewModel2::setTemperature}"
             android:text="确定"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="@={viewModel.tempLive}"
+            android:text="@={viewModel2.tempLive}"
             app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintStart_toEndOf="@+id/textView"
             app:layout_constraintTop_toTopOf="@+id/textView" />
