--- a/VehicleMonitorCar/hmi/src/main/res/values/themes.xml
+++ b/VehicleMonitorCar/hmi/src/main/res/values/themes.xml
@@ -1,5 +1,35 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="VehicleMonitor" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <style name="VehicleMonitor" parent="Theme.AppCompat.Light.NoActionBar">
     </style>
+
+    <style name="AppTheme" parent="Theme.Material3.Light.NoActionBar">
+        <item name="colorPrimary">@color/iris_blue_light_primary</item>
+        <item name="colorOnPrimary">@color/iris_blue_light_onPrimary</item>
+        <item name="colorPrimaryContainer">@color/iris_blue_light_primaryContainer</item>
+        <item name="colorOnPrimaryContainer">@color/iris_blue_light_onPrimaryContainer</item>
+        <item name="colorSecondary">@color/iris_blue_light_secondary</item>
+        <item name="colorOnSecondary">@color/iris_blue_light_onSecondary</item>
+        <item name="colorSecondaryContainer">@color/iris_blue_light_secondaryContainer</item>
+        <item name="colorOnSecondaryContainer">@color/iris_blue_light_onSecondaryContainer</item>
+        <item name="colorTertiary">@color/iris_blue_light_tertiary</item>
+        <item name="colorOnTertiary">@color/iris_blue_light_onTertiary</item>
+        <item name="colorTertiaryContainer">@color/iris_blue_light_tertiaryContainer</item>
+        <item name="colorOnTertiaryContainer">@color/iris_blue_light_onTertiaryContainer</item>
+        <item name="colorError">@color/iris_blue_light_error</item>
+        <item name="colorOnError">@color/iris_blue_light_onError</item>
+        <item name="colorErrorContainer">@color/iris_blue_light_errorContainer</item>
+        <item name="colorOnErrorContainer">@color/iris_blue_light_onErrorContainer</item>
+        <item name="android:colorBackground">@color/iris_blue_light_background</item>
+        <item name="colorOnBackground">@color/iris_blue_light_onBackground</item>
+        <item name="colorSurface">@color/iris_blue_light_surface</item>
+        <item name="colorOnSurface">@color/iris_blue_light_onSurface</item>
+        <item name="colorSurfaceVariant">@color/iris_blue_light_surfaceVariant</item>
+        <item name="colorOnSurfaceVariant">@color/iris_blue_light_onSurfaceVariant</item>
+        <item name="colorOutline">@color/iris_blue_light_outline</item>
+        <item name="colorSurfaceInverse">@color/iris_blue_light_inverseSurface</item>
+        <item name="colorOnSurfaceInverse">@color/iris_blue_light_inverseOnSurface</item>
+        <item name="colorPrimaryInverse">@color/iris_blue_light_inversePrimary</item>
+    </style>
+
 </resources>
