--- a/VehicleMonitorPhone/app/src/main/res/values/themes.xml
+++ b/VehicleMonitorPhone/app/src/main/res/values/themes.xml
@@ -1,16 +1,78 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.VehicleMonitorPhone" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+<!--    <style name="Theme.VehicleMonitorPhone" parent="Theme.MaterialComponents.DayNight.DarkActionBar">-->
+<!--        &lt;!&ndash; Primary brand color. &ndash;&gt;-->
+<!--        <item name="colorPrimary">@color/purple_500</item>-->
+<!--        <item name="colorPrimaryVariant">@color/purple_700</item>-->
+<!--        <item name="colorOnPrimary">@color/white</item>-->
+<!--        &lt;!&ndash; Secondary brand color. &ndash;&gt;-->
+<!--        <item name="colorSecondary">@color/teal_200</item>-->
+<!--        <item name="colorSecondaryVariant">@color/teal_700</item>-->
+<!--        <item name="colorOnSecondary">@color/black</item>-->
+<!--        &lt;!&ndash; Status bar color. &ndash;&gt;-->
+<!--        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>-->
+<!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+<!--    </style>-->
+
+    <style name="AppTheme" parent="Theme.Material3.Light.NoActionBar">
+        <item name="colorPrimary">@color/md_theme_primary</item>
+        <item name="colorOnPrimary">@color/md_theme_on_primary</item>
+        <item name="colorPrimaryContainer">@color/md_theme_primary_container</item>
+        <item name="colorOnPrimaryContainer">@color/md_theme_on_primary_container</item>
+        <item name="colorSecondary">@color/md_theme_secondary</item>
+        <item name="colorOnSecondary">@color/md_theme_on_secondary</item>
+        <item name="colorSecondaryContainer">@color/md_theme_secondary_container</item>
+        <item name="colorOnSecondaryContainer">@color/md_theme_on_secondary_container</item>
+        <item name="colorTertiary">@color/md_theme_tertiary</item>
+        <item name="colorOnTertiary">@color/md_theme_on_tertiary</item>
+        <item name="colorTertiaryContainer">@color/md_theme_tertiary_container</item>
+        <item name="colorOnTertiaryContainer">@color/md_theme_on_tertiary_container</item>
+        <item name="colorError">@color/md_theme_error</item>
+        <item name="colorErrorContainer">@color/md_theme_error_container</item>
+        <item name="colorOnError">@color/md_theme_on_error</item>
+        <item name="colorOnErrorContainer">@color/md_theme_on_error_container</item>
+        <item name="colorOnBackground">@color/md_theme_on_background</item>
+        <item name="colorSurface">@color/md_theme_surface</item>
+        <item name="colorOnSurface">@color/md_theme_on_surface</item>
+        <item name="colorSurfaceVariant">@color/md_theme_surface_variant</item>
+        <item name="colorOnSurfaceVariant">@color/md_theme_on_surface_variant</item>
+        <item name="colorOutline">@color/md_theme_outline</item>
+        <item name="colorSurfaceInverse">@color/md_theme_inverse_surface</item>
+        <item name="colorOnSurfaceInverse">@color/md_theme_inverse_on_surface</item>
+        <item name="colorPrimaryInverse">@color/md_theme_inverse_primary</item>
+        <item name="colorBackgroundFloating">@color/md_theme_background</item>
+
+        <item name="android:colorBackground">?colorSurface</item>
+        <item name="android:statusBarColor">?colorSurface</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
+
+    <style name="AppTheme_Iris_Blue" parent="AppTheme">
+        <item name="colorPrimary">@color/iris_blue_light_primary</item>
+        <item name="colorOnPrimary">@color/iris_blue_light_onPrimary</item>
+        <item name="colorPrimaryContainer">@color/iris_blue_light_primaryContainer</item>
+        <item name="colorOnPrimaryContainer">@color/iris_blue_light_onPrimaryContainer</item>
+        <item name="colorSecondary">@color/iris_blue_light_secondary</item>
+        <item name="colorOnSecondary">@color/iris_blue_light_onSecondary</item>
+        <item name="colorSecondaryContainer">@color/iris_blue_light_secondaryContainer</item>
+        <item name="colorOnSecondaryContainer">@color/iris_blue_light_onSecondaryContainer</item>
+        <item name="colorTertiary">@color/iris_blue_light_tertiary</item>
+        <item name="colorOnTertiary">@color/iris_blue_light_onTertiary</item>
+        <item name="colorTertiaryContainer">@color/iris_blue_light_tertiaryContainer</item>
+        <item name="colorOnTertiaryContainer">@color/iris_blue_light_onTertiaryContainer</item>
+        <item name="colorError">@color/iris_blue_light_error</item>
+        <item name="colorOnError">@color/iris_blue_light_onError</item>
+        <item name="colorErrorContainer">@color/iris_blue_light_errorContainer</item>
+        <item name="colorOnErrorContainer">@color/iris_blue_light_onErrorContainer</item>
+        <item name="android:colorBackground">@color/iris_blue_light_background</item>
+        <item name="colorOnBackground">@color/iris_blue_light_onBackground</item>
+        <item name="colorSurface">@color/iris_blue_light_surface</item>
+        <item name="colorOnSurface">@color/iris_blue_light_onSurface</item>
+        <item name="colorSurfaceVariant">@color/iris_blue_light_surfaceVariant</item>
+        <item name="colorOnSurfaceVariant">@color/iris_blue_light_onSurfaceVariant</item>
+        <item name="colorOutline">@color/iris_blue_light_outline</item>
+        <item name="colorSurfaceInverse">@color/iris_blue_light_inverseSurface</item>
+        <item name="colorOnSurfaceInverse">@color/iris_blue_light_inverseOnSurface</item>
+        <item name="colorPrimaryInverse">@color/iris_blue_light_inversePrimary</item>
+    </style>
+
 </resources>
