--- a/VehicleMonitorPhone/app/src/main/res/layout/activity_login.xml
+++ b/VehicleMonitorPhone/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     </data>
 
     <FrameLayout
-        tools:context=".MainActivity"
+        tools:context=".ui.MainActivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingStart="24dp"
