feat:完成报警通知和消息中心,所有功能实现完毕

--- a/VehicleMonitorPhone/app/src/main/res/layout/fragment_mine.xml
+++ b/VehicleMonitorPhone/app/src/main/res/layout/fragment_mine.xml
@@ -43,6 +43,7 @@
                 android:background="@drawable/bg_line_corner" />
 
             <LinearLayout
+                android:id="@+id/ll_message"
                 android:layout_marginTop="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
